<resources>
    <string name="app_name">LifeTrack</string>
    <string name="back">Back</string>
    <string name="user_profile">User Profile</string>
    <string name="manage_personal_info">Manage your personal information</string>
    <string name="profile_input">Profile Input</string>
    <string name="name_label">Name</string>
    <string name="age_label">Age</string>
    <string name="gender_label">Gender</string>
    <string name="height_label">Height</string>
    <string name="weight_label">Weight</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_age">Enter age</string>
    <string name="enter_gender">Enter gender</string>
    <string name="enter_height">Enter height (cm)</string>
    <string name="enter_weight">Enter weight (kg)</string>
    <string name="save_profile">Save Profile</string>
    <string name="profile_info_placeholder">Profile info will appear here</string>
</resources>